--- a/calculator.html
+++ b/calculator.html
@@ -5,12 +5,22 @@
     <title>Calculator</title>
     <meta charset="utf-8">
     <script type="text/javascript">
-        function cube() { var num = document.getElementById("n1"); num.value = Math.pow(num.value, 3); } </script>
+        function cube() { 
+            var num = document.getElementById("n1"); 
+            num.value = Math.pow(num.value, 3); 
+            }
+        function quarter() { 
+            var num = document.getElementById("n1"); 
+            num.value = Math.pow(num.value, 4); 
+            } 
+             </script>
+        
 </head>
 
 <body>
     <h1>Calculadora de Jose Barros</h1> Number: <input type="text" id="n1">
     <p> <button onclick="cube()"> x^3 </button> </p>
+    <p> <button onclick="quarter()"> x^4 </button> </p>
 </body>
 
 </html>
