--- a/calculator.html
+++ b/calculator.html
@@ -5,12 +5,21 @@
     <title>Calculator</title>
     <meta charset="utf-8">
     <script type="text/javascript">
-        function cube() { var num = document.getElementById("n1"); num.value = Math.pow(num.value, 3); } </script>
+        function cube() { 
+            var num = document.getElementById("n1");
+            num.value = Math.pow(num.value, 3); 
+            }
+        function sine() { 
+            var num = document.getElementById("n1"); 
+            num.value = Math.sin(num.value); 
+            }
+    </script>
 </head>
 
 <body>
     <h1>Calculadora de Jose Barros</h1> Number: <input type="text" id="n1">
     <p> <button onclick="cube()"> x^3 </button> </p>
+    <p> <button onclick="sine()"> sin(x) </button> </p>
 </body>
 
 </html>
