--- a/calculator.html
+++ b/calculator.html
@@ -21,6 +21,7 @@
         
         
         function square() { var num = document.getElementById("n1"); num.value = Math.pow(num.value, 2); }
+        function reverse() { var num = document.getElementById("n1"); num.value = (1/num.value); }
         </script>
 </head>
 
@@ -30,6 +31,7 @@
     <p> <button onclick="sine()"> sin(x) </button> </p>
     <p> <button onclick="quarter()"> x^4 </button> </p>
     <p> <button onclick="square()"> x^2 </button> </p>
+    <p> <button onclick="reverse()"> 1/x </button> </p>
 </body>
 
 </html>
